--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,24 +80,36 @@ header nav ul li {
  }
 
  .leftside {
-    width: 300px;
+   display: flex;
+   flex-direction: column;
+    width: 250px;
     /* margin-right: 20px; */
     padding-right: 20px;
-    font-size: 40px;
-    text-align: right;
-    
-
+    font-size: 40px;  
  }
+ 
+ 
 
  .rightside {
+   display: flex;
+   flex-direction: column;
     flex: 1;
     border-left: solid 4px var(--main-color);
     padding: 0px 100px 20px 40px;
  }
 
+ .leftside-item {
+    text-align: right;
+ }
+
+
  .content-box {
     display: flex;
 
+ }
+
+ .piclink {
+   display: flex;
  }
  
 
@@ -162,6 +174,7 @@ header nav ul li {
  }
 
  .smallbox {
+   /* display: flex; */
    height: 125px;
    width: 500px;
  }
