--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,8 +81,8 @@ header nav ul li {
 
  .leftside {
    width: 25%;
-   /* margin-right: 20px; */
-   padding-right: 20px;
+   margin-right: 20px;
+   /* padding-right: 20px; */
    font-size: 40px; 
    text-align: right; 
  }
@@ -105,12 +105,17 @@ header nav ul li {
  #surf {
     width: 100%;
     height: 300px;
+ }
 
+ .surf-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
  }
 
  .card-inline {
-   display: flex;
-   justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
  }
 
  .smallbox {
@@ -158,18 +163,42 @@ header nav ul li {
 
  .footer-list li a {
     padding: 2px 5px;
-    font-size: 20px;
+    font-size: 18px;
     color: var(--main-color);
     text-decoration: none;
     border-bottom: solid 3px var(--main-color);
  }
 
  .blur-img {
-   max-width: 100%;
+   width: 100%;
    opacity: 0.3;
  }
 
  .blur-img:hover {
    transition: 0.3s;
    opacity: 1;
+ }
+
+ @media screen and (max-width: 768px) {
+
+   header nav {
+         padding-right: 10px;
+      }
+   .leftside {
+      font-size: 20px;
+   }
+   .card-inline {
+      flex-direction: column;
+      width: 100%;
+   }
+   .smallbox {
+      width: 100%;
+   }
+   .footer-list {
+      flex-direction: column;
+   }
+   .footer-list li {
+      padding: 10px;
+   }
+   
  }
